tests/invalid/bug191.err_exp
bug191.m:020: In clause for
bug191.m:020:   `'ClassMethod_for_bug191__foo________bug191__baz_2'(in,
bug191.m:020:   out((bug191.a)))':
bug191.m:020:   mode error: argument 2 did not get sufficiently instantiated.
bug191.m:020:   Final instantiatedness of `HeadVar__2' was `ground',
bug191.m:020:   expected final instantiatedness was `bound(bug191.a(ground))'.
